5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4351/executions/1649_1053.log
== TEST (2019-04-11 19:05:20) 
-- CODE:
patrono=input("nome do patrono da boneca")

if (patrono == "cervo"):
	menssagem= "cervo eh patrono do Harry Potter"
else:
	menssagem= "<patrono> nao eh patrono do Harry Potter"

print(menssagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:05:57) 
-- CODE:
patrono=input("nome do patrono da boneca")

if (patrono == "cervo"):
	menssagem= "cervo eh patrono do Harry Potter"
else:
	menssagem= patrono "nao eh patrono do Harry Potter"

print(menssagem)
-- ERROR:
File "XXXX", line 6
    menssagem= patrono "nao eh patrono do Harry Potter"
                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:06:19) 
-- CODE:
patrono=input("nome do patrono da boneca")

if (patrono == "cervo"):
	menssagem= "cervo eh patrono do Harry Potter"
else:
	menssagem= patrono "nao eh patrono do Harry Potter"

print(menssagem)
-- ERROR:
File "XXXX", line 6
    menssagem= patrono "nao eh patrono do Harry Potter"
                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:06:47) 
-- CODE:
patrono=input("nome do patrono da boneca")

if (patrono == "cervo"):
	menssagem= "cervo eh patrono do Harry Potter"
else:
	menssagem= <patrono> "nao eh patrono do Harry Potter"

print(menssagem)
-- ERROR:
File "XXXX", line 6
    menssagem= <patrono> "nao eh patrono do Harry Potter"
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:07:08) 
-- CODE:
patrono=input("nome do patrono da boneca")

if (patrono == "cervo"):
	menssagem= "cervo eh patrono do Harry Potter"
else:
	menssagem= ""patrono"nao eh patrono do Harry Potter"

print(menssagem)
-- ERROR:
File "XXXX", line 6
    menssagem= ""patrono"nao eh patrono do Harry Potter"
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:07:29) 
-- CODE:
patrono=input("nome do patrono da boneca")

if (patrono == "cervo"):
	menssagem= "cervo eh patrono do Harry Potter"
else:
	menssagem= patrono "nao eh patrono do Harry Potter"

print(menssagem)
-- ERROR:
File "XXXX", line 6
    menssagem= patrono "nao eh patrono do Harry Potter"
                                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:08:05) 
-- CODE:
patrono=input("nome do patrono da boneca")

if (patrono == "cervo"):
	menssagem= "cervo eh patrono do Harry Potter"
else:
	menssagem= <patrono> "nao eh patrono do Harry Potter"

print(menssagem)
-- ERROR:
File "XXXX", line 6
    menssagem= <patrono> "nao eh patrono do Harry Potter"
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:08:16) 
-- CODE:
patrono=input("nome do patrono da boneca")

if (patrono == "cervo"):
	menssagem= "cervo eh patrono do Harry Potter"
else:
	menssagem= <patrono>" nao eh patrono do Harry Potter"

print(menssagem)
-- ERROR:
File "XXXX", line 6
    menssagem= <patrono>" nao eh patrono do Harry Potter"
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:08:34) 
-- CODE:
patrono=input("nome do patrono da boneca")

if (patrono == "cervo"):
	menssagem= "cervo eh patrono do Harry Potter"
else:
	menssagem= patrono

print(menssagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:08:56) 
-- CODE:
patrono=input("nome do patrono da boneca")

if (patrono == "cervo"):
	menssagem= "cervo eh patrono do Harry Potter"
else:
	menssagem= patrono+"nao eh patrono do Harry Potter"

print(menssagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:09:02) 
-- CODE:
patrono=input("nome do patrono da boneca")

if (patrono == "cervo"):
	menssagem= "cervo eh patrono do Harry Potter"
else:
	menssagem= patrono+" nao eh patrono do Harry Potter"

print(menssagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:09:11) 
-- CODE:
patrono=input("nome do patrono da boneca")

if (patrono == "cervo"):
	menssagem= "cervo eh patrono do Harry Potter"
else:
	menssagem= patrono+" nao eh patrono do Harry Potter"

print(menssagem)
-- EXECUTION TIME:
0.119819
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
